# PyBasic

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
src/pybasic/: __init__.py
tests/: test_interpreter.py
